resolve problem repo

--- a/techweb-project/public/index.html
+++ b/techweb-project/public/index.html
@@ -49,6 +49,7 @@
                         <input type="password"  class="form__input" id="pass-in" autofocus placeholder="Password" name="passwordin">
                         <div class="form__input-error-message"></div>
                     </div>
+                    <button class="form__button_google" onclick="signIn()">Sign In With Google</button>
                     <button class="form__button" id="formbutton" type="submit">Continue</button>
                     <p class="form__text">
                         <a href="#" class="form__link">Forgot your password?</a>
@@ -57,6 +58,7 @@
                         <a class="form__link" href=singin.html id="linkCreateAccount">Don't have an account? Create account</a>
                     </p>
                 </form>
+                <button class="form__button_google" onclick="signIn()">Sign In With Google</button>
             </div>
         </div>
     </section>
@@ -117,4 +119,5 @@
 </body>
 
 <script src="js/singin.js"></script>
+<script src="js/google.js"></script>
 </html>
