--- a/techweb-project/public/invalidemail.html
+++ b/techweb-project/public/invalidemail.html
@@ -17,9 +17,8 @@
                 <ul>
                     <input type="text" id="answer" name="answer" readonly/>
                     <li><a id="logged" href=></a></li>
-                    <li><a href=singin.html>Home</a></li>
-                    <li><a id="page2" href=index.html>page2</a></li>
-                    <li><a href=>page3</a></li>
+                    <li><a href=index.html>logout</a></li>
+                    
                 </ul>
             </nav>
         </div>
@@ -106,8 +105,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="">page2</a></li>
-                    <li><a href="">page3</a></li>
+                    
                 </ul>
             </nav>
             <div class="social">
