--- a/techweb-project/public/invalidemail.html
+++ b/techweb-project/public/invalidemail.html
@@ -17,7 +17,7 @@
                 <ul>
                     <input type="text" id="answer" name="answer" readonly/>
                     <li><a id="logged" href=></a></li>
-                    <li><a href=index.html>logout</a></li>
+                    <li><a href=index.html>Logout</a></li>
                     
                 </ul>
             </nav>
@@ -28,11 +28,9 @@
     <section class="showcase">
         <div class="container grid">
             <div class="showcase-text">
-                <p>Ideata da Luca Di Meglio, Giuseppe Langella e Biagio De Blasio<br>
-                    SoccerBooking nasce con l'intento di fornire una panoramica dei campi da gioco disponibili in tempo reale.<br>
-                    Inserisci i filtri richiesti e scegli il luogo e l'orario preferito per giocare la tua partita<br>e trova i campi da calcetto disponibili
-                    più vicini a te!</p>
-                <a href="features.html" class="btn btn-outline">Read More</a>
+                <p>Designed by Luca Di Meglio, Giuseppe Langella and Biagio De Blasio<br>
+                    SoccerBooking was created with the intention of providing an overview of the playing fields available in real time.<br>
+                    Insert the required filters and choose the preferred place and time to play your game and find the available soccer fields closest to you!</p>
             </div>
 
             <div class="showcase-form card" id="loginform">
@@ -45,7 +43,7 @@
                     </div>
                     <div class="form__input-group">
                         <input type="text" class="form__input"  id="email-rec" autofocus placeholder="Email Address"- name =email>
-                        <div class="form__input-error-message">già iscritto</div>
+                        <div class="form__input-error-message">Already subscribed!</div>
                     </div>
                     <div class="form__input-group">
                         <input type="password" class="form__input" id="pass-rec" autofocus placeholder="Password" name="password">
@@ -75,17 +73,17 @@
                 <div>
                     <img class="photo-stats" src="images/calcio.png"></i>
                     <h3>+400</h3>
-                    <p class="text-secondary">Campi di calcio</p>
+                    <p class="text-secondary">Football fields</p>
                 </div>
                 <div>
                     <img class="photo-stats" src="images/money-refund.png"></i>
                     <h3></h3>
-                    <p class="text-secondary">Rimborso completo fino a 3 hr prima del match</p>
+                    <p class="text-secondary">Payment upon arrival in the field!</p>
                 </div>
                 <div>
                     <img class="photo-stats" src="images/booking.png"></i>
                     <h3>+3000</h3>
-                    <p class="text-secondary">prenotazioni al giorno</p>
+                    <p class="text-secondary">Bookings per day!</p>
                 </div>
             </div>
         </div>
@@ -105,15 +103,17 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
+                    <details>
+                        <summary>
+                            Contacts
+                        </summary>
+                        <p>luca.dimeglio001@studenti.uniparthenope.it<br>
+                            giuseppe.langella002@studenti.uniparthenope.it<br>
+                            biagio.deblasio001@studenti.uniparthenope.it<br>
+                            Centro Direzionale ISOLA C4, 80133 Napoli NA</p>
                     
                 </ul>
             </nav>
-            <div class="social">
-                <a href="#"><i class="fab fa-github fa-2x"></i></a>
-                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            </div>
         </div>
     </footer>
 </body>
