cambiato colore card
jammne

--- a/techweb-project/public/singin.html
+++ b/techweb-project/public/singin.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a id="logged" href=></a></li>
-                    <li><a href=index.html>logout</a></li>
+                    <li><a style="display: none;" href=index.html>logout</a></li>
                     
                 </ul>
             </nav>
@@ -94,7 +94,7 @@
     <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
-                <h1>Soccer Booking
+                <h1>SoccerBooking
                 </h1>
                 <p>Copyright &copy; 2022</p>
             </div>
